...
            <Text style={styles.title}>Streamers</Text>
            <Text style={styles.title}>On-The-Go</Text>
          </View>
          <View>
            <CustomButton
              style={styles.button}
              name={'Join as Host'}
              onPress={() => {
                setIsHost(true);
                setIsJoined(true);
                navigation.navigate('StreamingPage')
              }}
            />
            <CustomButton
              style={styles.button}
              name={'Join as Viewer'}
              onPress={() => {
                setIsHost(false);
                setIsJoined(true);
                navigation.navigate('ViewerPage')
              }}
            />
...
