...
  };

  return (
    <View style={styles.main}>
      <View style={[styles.btnContainer, {width: isHost ? '40%' : '30%'}]}>
        <CustomButton
          name={isHost ? 'End Stream' : 'Leave'}
          onPress={leave}
        />
      </View>
      <View >
        {isJoined && isHost && (
          <React.Fragment key={0}>
...
