...
const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: "#fff",
    alignItems: "center",
  },
  map: {
    width: 300,
    height: 300,
    borderColor: "#DDD",
    borderWidth: 1,
  },
});
